apps/healthmap-adaptatutor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthmap-adaptatutor
  labels:
    app.kubernetes.io/name: healthmap-adaptatutor
    app.kubernetes.io/part-of: healthmap
